@@ -1,3 +1,8 @@
+2017-08-08  Bin Cheng  <bin.cheng@arm.com>
+
+	PR tree-optimization/81744
+	* gcc.dg/tree-ssa/pr81744.c: New.
+
 2017-08-08  Marek Polacek  <polacek@redhat.com>
 
 	PR c++/81607
